--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,22 +1,9 @@
 extends base
+include _reviewCard
 
-mixin reviewCard(review)
-  .reviews__card
-    .reviews__avatar
-      img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`)
-      h6.reviews__user= review.user.name
-    p.reviews__text= review.review
-    .reviews__rating
-      svg.reviews__star.reviews__star--active
-        use(xlink:href='/img/icons.svg#icon-star')
-      svg.reviews__star.reviews__star--active
-        use(xlink:href='/img/icons.svg#icon-star')
-      svg.reviews__star.reviews__star--active
-        use(xlink:href='/img/icons.svg#icon-star')
-      svg.reviews__star.reviews__star--active
-        use(xlink:href='/img/icons.svg#icon-star')
-      svg.reviews__star.reviews__star--active
-        use(xlink:href='/img/icons.svg#icon-star')
+block append head
+  script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
+  link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -53,32 +40,35 @@ block content
           - const date = tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
           +overviewBox('Next date', date, 'calendar')
           +overviewBox('Difficulty', tour.difficulty, 'trending-up')
-          +overviewBox('Participants', tour.maxGroupSize, 'user')
-          +overviewBox('Ratings', `${tour.ratingsAverage} / 5`, 'star')
+          +overviewBox('Participants', `${tour.maxGroupSize} people`, 'user')
+          +overviewBox('Rating', `${tour.ratingsAverage} / 5`, 'star')
 
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Your tour guides
-          each guide in tour.guides 
+
+          each guide in tour.guides
             .overview-box__detail
               img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+
               - if (guide.role === 'lead-guide')
                 span.overview-box__label Lead guide
-              -if (guide.role === 'guide')
+              - if (guide.role === 'guide')
                 span.overview-box__label Tour guide
               span.overview-box__text= guide.name
 
     .description-box
       h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
-      - const paragraphs = tour.description.split('\n')
-      each p in paragraphs 
+      - const parapraphs = tour.description.split('\n');
+      each p in parapraphs
         p.description__text= p
 
   section.section-pictures
-    each img, i in tour.images 
+    each img, i in tour.images
       .picture-box
-        img.picture-box__img(src=`/img/tours/${img}`, alt=`${tour.name}Tour ${i+1}` class=`picture-box__img--${i+1}`)
+        img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
+
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
@@ -89,9 +79,13 @@ block content
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-      img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
-        p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
-        button.btn.btn--green.span-all-rows Book tour now!
+        p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
+        
+        if user
+          button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book tour now!
+        else
+          a.btn.btn--green.span-all-rows(href='/login') Log in to book tour
